--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,27 +27,80 @@
                 </div>
             </div>
 
-            <div class="table-wrap">
-                <table id="dataTable">
-                <thead>
-                    <tr>
-                        <th>Paciente</th>
-                        <th>Data de Nasc</th>
-                        <th>Data Admissão</th>
-                        <th>Data da Coleta</th>
-                        <th>Data Ence</th>
-                        <th>Tempo Colet</th>
-                        <th>Diagnóstico</th>
-                        <th>Desfecho</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody id="tableBody""></tbody>
-                </table>
+            <div class="search-bar">
+                <input
+                    type="text"
+                    id="searchInput"
+                    placeholder="Buscar paciente pelo nome..."
+                />
+            </div>
 
+            <div class="records-wrap">
+                <div id="recordsContainer">
+                    
+                </div>
                 <div class="empty" id="emptyState">Nenhum dado carregado ainda.</div>
             </div>
+
         </div>
+
+
+
+
+
+ <!-- Modal de visualização do registro -->
+<div class="modal-overlay" id="recordModal" style="display:none;">
+  <div class="modal">
+
+    <div class="modal-header">
+      <h2 id="modalTitle">Detalhes do Registro</h2>
+      <button onclick="closeModal()">✕</button>
+    </div>
+
+    <div class="modal-body">
+
+      <section class="modal-section">
+        <h3>Dados do Paciente</h3>
+        <div class="grid">
+          <div><strong>Nome:</strong> <span id="m_nome"></span></div>
+          <div><strong>Local:</strong> <span id="m_local"></span></div>
+          <div><strong>Material:</strong> <span id="m_material"></span></div>
+          <div><strong>Microrganismo:</strong> <span id="m_micro"></span></div>
+        </div>
+      </section>
+
+      <section class="modal-section">
+        <h3>Datas</h3>
+        <div class="grid">
+          <div><strong>Admissão:</strong> <span id="m_admissao"></span></div>
+          <div><strong>Coleta:</strong> <span id="m_coleta"></span></div>
+          <div><strong>Encerramento:</strong> <span id="m_ence"></span></div>
+          <div><strong>Inserido no Sistema:</strong> <span id="m_insert"></span></div>
+        </div>
+      </section>
+
+      <section class="modal-section">
+        <h3>Antibiograma</h3>
+        <table class="antibiograma">
+          <thead>
+            <tr>
+              <th>Antimicrobiano</th>
+              <th>Resultado</th>
+            </tr>
+          </thead>
+          <tbody id="antibiogramaBody"></tbody>
+        </table>
+      </section>
+
+      <section class="modal-section">
+        <h3>Observações</h3>
+        <p id="m_obs">—</p>
+      </section>
+
+    </div>
+  </div>
+</div>
+
 
 
 
