--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
                 <div class="row">
                 <input type="file" id="pdfInput" accept="application/pdf">
                 <button class="btn btn-primary" id="uploadBtn">Enviar PDF</button>
-                <span class="badge" id="statusBadge">Pronto</span>
+                <!-- <span class="badge" id="statusBadge">Pronto</span> -->
                 </div>
             </div>
 
@@ -34,6 +34,22 @@
                     id="searchInput"
                     placeholder="Buscar paciente pelo nome..."
                 />
+
+                  <select id="monthFilter">
+                    <option value="">Todos os meses</option>
+                    <option value="0">Janeiro</option>
+                    <option value="1">Fevereiro</option>
+                    <option value="2">Março</option>
+                    <option value="3">Abril</option>
+                    <option value="4">Maio</option>
+                    <option value="5">Junho</option>
+                    <option value="6">Julho</option>
+                    <option value="7">Agosto</option>
+                    <option value="8">Setembro</option>
+                    <option value="9">Outubro</option>
+                    <option value="10">Novembro</option>
+                    <option value="11">Dezembro</option>
+                  </select>
             </div>
 
             <div class="records-wrap">
@@ -103,7 +119,7 @@
 </div>
 
 
-
+<!-- MODAL para editar -->
 <div class="modal-overlay" id="editModal" style="display:none;">
   <div class="modal">
 
