feat: Implementação frontend exportação de relatórios excel.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
                 <div class="row">
                 <input type="file" id="pdfInput" accept="application/pdf">
                 <button class="btn btn-primary" id="uploadBtn">Enviar PDF</button>
-                <!-- <span class="badge" id="statusBadge">Pronto</span> -->
+                <span class="badge" id="statusBadge">Pronto</span>
                 </div>
             </div>
 
