feat: Implementação da coluna de data_nascimento no frontend.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,7 +89,7 @@
       <section class="modal-section">
         <h3>Datas</h3>
         <div class="grid">
-          <div><strong>Admissão:</strong> <span id="m_admissao"></span></div>
+          <div><strong>Nascimento:</strong> <span id="m_nascimento"></span></div>
           <div><strong>Coleta:</strong> <span id="m_coleta"></span></div>
           <div><strong>Encerramento:</strong> <span id="m_ence"></span></div>
           <div><strong>Inserido no Sistema:</strong> <span id="m_insert"></span></div>
@@ -197,8 +197,8 @@
         <h3>Datas</h3>
         <div class="grid">
           <div>
-            <label>Data Admissão</label>
-            <input type="date" id="e_admissao" />
+            <label>Data Nascimento</label>
+            <input type="date" id="e_nascimento" />
           </div>
 
           <div>
